--- a/SreBot/SreBot.csproj
+++ b/SreBot/SreBot.csproj
@@ -11,7 +11,16 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Noobot.Core" Version="3.1.42" />
+    <PackageReference Include="Noobot.Modules.DNS" Version="1.0.0" />
+    <PackageReference Include="Noobot.Modules.LoadBalancerDotOrg" Version="1.0.0" />
+    <PackageReference Include="Noobot.Modules.NewRelic" Version="1.0.0" />
     <PackageReference Include="Noobot.Toolbox" Version="3.1.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
