Update appsettings config for new modules

--- a/SreBot/appsettings.json
+++ b/SreBot/appsettings.json
@@ -1,33 +1,36 @@
 ﻿{
   "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Information"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Information"
-      }
-    }
+	"IncludeScopes": false,
+	"Debug": {
+	  "LogLevel": {
+		"Default": "Information"
+	  }
+	},
+	"Console": {
+	  "LogLevel": {
+		"Default": "Information"
+	  }
+	}
   },
   "LogConfiguration": {
-    "factoryAdapter": {
-      "type": "Common.Logging.Simple.DebugLoggerFactoryAdapter, Common.Logging",
-      "arguments": {
-        "level": "All",
-        "showDateTime": true,
-        "showLogName": true,
-        "showLevel": true,
-        "dateTimeFormat": "yyyy/MM/dd HH:mm:ss.fff"
-      }
-    }
+	"factoryAdapter": {
+	  "type": "Common.Logging.Simple.DebugLoggerFactoryAdapter, Common.Logging",
+	  "arguments": {
+		"level": "All",
+		"showDateTime": true,
+		"showLogName": true,
+		"showLevel": true,
+		"dateTimeFormat": "yyyy/MM/dd HH:mm:ss.fff"
+	  }
+	}
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SreBot;Trusted_Connection=True;MultipleActiveResultSets=true"
+	"DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SreBot;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "Bot": {
-    "slack:apiToken": ""
-  }
+	"Bot": {
+		"newrelic:apikey": "YOUR_API_KEY_GOES_HERE",
+		"slack:apiToken": "YOUR_API_KEY_GOES_HERE",
+		"lbo:trustAllCerts": "true",
+		"lbo:LB01": "{\"Name\": \"LB01\",\"Username\": \"loadbalancer\",\"Password\": \"loadbalancer\",\"ApiUrl\": \"https://LB01:9443/api/\",\"ApiKey\": \"YOUR_API_KEY_GOES_HERE\"}"
+	}
 }
