--- a/SreBot/SreBot.csproj
+++ b/SreBot/SreBot.csproj
@@ -10,16 +10,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
-    <PackageReference Include="Noobot.Core" Version="3.1.42" />
-    <PackageReference Include="Noobot.Modules.DNS" Version="1.0.0" />
-    <PackageReference Include="Noobot.Modules.LoadBalancerDotOrg" Version="1.0.0" />
-    <PackageReference Include="Noobot.Modules.NewRelic" Version="1.0.0" />
-    <PackageReference Include="Noobot.Toolbox" Version="3.1.6" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\Noobot.Modules\src\Noobot.Modules.IncidentManagement\Noobot.Modules.IncidentManagement.csproj" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.1" />
+    <PackageReference Include="Noobot.Modules.DNS" Version="1.0.2" />
+    <PackageReference Include="Noobot.Modules.IncidentManagement" Version="1.0.1" />
+    <PackageReference Include="Noobot.Modules.LoadBalancerDotOrg" Version="1.0.2" />
+    <PackageReference Include="Noobot.Modules.NewRelic" Version="1.0.2" />
   </ItemGroup>
 
   <ItemGroup>
