--- a/SreBot/SreBot.csproj
+++ b/SreBot/SreBot.csproj
@@ -1,26 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netcoreapp2.0</TargetFramework>
+		<PublishWithAspNetCoreTargetManifest>false</PublishWithAspNetCoreTargetManifest>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Folder Include="wwwroot\" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="wwwroot\" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.1" />
-    <PackageReference Include="Noobot.Modules.DNS" Version="1.0.2" />
-    <PackageReference Include="Noobot.Modules.IncidentManagement" Version="1.0.4" />
-    <PackageReference Include="Noobot.Modules.LoadBalancerDotOrg" Version="1.0.2" />
-    <PackageReference Include="Noobot.Modules.NewRelic" Version="1.0.2" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.2" />
+		<PackageReference Include="Noobot.Modules.DNS" Version="1.0.3" />
+		<PackageReference Include="Noobot.Modules.IncidentManagement" Version="1.0.5" />
+		<PackageReference Include="Noobot.Modules.LoadBalancerDotOrg" Version="1.0.3" />
+		<PackageReference Include="Noobot.Modules.NewRelic" Version="1.0.2" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Content Update="appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+	<ItemGroup>
+		<Content Update="appsettings.json">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 
 </Project>
