--- a/SreBot/appsettings.json
+++ b/SreBot/appsettings.json
@@ -24,13 +24,14 @@
 	  }
 	}
   },
-  "ConnectionStrings": {
-	"DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SreBot;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
 	"Bot": {
 		"newrelic:apikey": "YOUR_API_KEY_GOES_HERE",
 		"slack:apiToken": "YOUR_API_KEY_GOES_HERE",
 		"lbo:trustAllCerts": "true",
-		"lbo:LB01": "{\"Name\": \"LB01\",\"Username\": \"loadbalancer\",\"Password\": \"loadbalancer\",\"ApiUrl\": \"https://LB01:9443/api/\",\"ApiKey\": \"YOUR_API_KEY_GOES_HERE\"}"
+		"lbo:LB01": "{\"Name\": \"LB01\",\"Username\": \"loadbalancer\",\"Password\": \"loadbalancer\",\"ApiUrl\": \"https://LB01:9443/api/\",\"ApiKey\": \"YOUR_API_KEY_GOES_HERE\"}",
+		"incident:mainChannel": "incidents",
+		"incident:warRooms": "incident-warroom0,incident-warroom1,incident-warroom2,incident-warroom3",
+		"incident:azureConnectionString": "DefaultEndpointsProtocol=https;AccountName=YOUR_ACCOUNT_NAME_GOES_HERE;AccountKey=YOUR_ACCOUNT_KEY_GOES_HERE;EndpointSuffix=core.windows.net"
+		
 	}
 }
