--- a/SreBot/Dockerfile
+++ b/SreBot/Dockerfile
@@ -4,7 +4,9 @@ WORKDIR /app
 
 COPY . .
 
-RUN dotnet publish -c Release -o /release ./SreBot/SreBot.csproj
+RUN dotnet publish -c Release -o /release ./SreBot.csproj
+
+RUN dir /release
 
 
 FROM microsoft/aspnetcore:2.0.0-nanoserver
