--- a/SreBot/appsettings.json
+++ b/SreBot/appsettings.json
@@ -27,11 +27,10 @@
 	"Bot": {
 		"newrelic:apikey": "YOUR_API_KEY_GOES_HERE",
 		"slack:apiToken": "YOUR_API_KEY_GOES_HERE",
-		"lbo:trustAllCerts": "true",
+		"lbo:trustAllCerts": "YOUR_TRUST_ALL_CERTS_CONFIG_GOES_HERE",
 		"lbo:LB01": "{\"Name\": \"LB01\",\"Username\": \"loadbalancer\",\"Password\": \"loadbalancer\",\"ApiUrl\": \"https://LB01:9443/api/\",\"ApiKey\": \"YOUR_API_KEY_GOES_HERE\"}",
-		"incident:mainChannel": "incidents",
-		"incident:warRooms": "incident-warroom0,incident-warroom1,incident-warroom2,incident-warroom3",
-		"incident:azureConnectionString": "DefaultEndpointsProtocol=https;AccountName=YOUR_ACCOUNT_NAME_GOES_HERE;AccountKey=YOUR_ACCOUNT_KEY_GOES_HERE;EndpointSuffix=core.windows.net"
-		
+		"incident:mainChannel": "YOUR_INCIDENT_CHANNEL_NAME_GOES_HERE",
+		"incident:warRooms": "YOUR_INCIDENT_WARROOM_CHANNEL_0_NAME_GOES_HERE,YOUR_INCIDENT_WARROOM_CHANNEL_0_NAME_GOES_HERE",
+		"incident:azureConnectionString": "YOUR_AZURE_CONNECTION_STING_GOES_HERE"
 	}
 }
