Update incident module

--- a/SreBot/appsettings.json
+++ b/SreBot/appsettings.json
@@ -31,6 +31,7 @@
 		"lbo:LB01": "{\"Name\": \"LB01\",\"Username\": \"loadbalancer\",\"Password\": \"loadbalancer\",\"ApiUrl\": \"https://LB01:9443/api/\",\"ApiKey\": \"YOUR_API_KEY_GOES_HERE\"}",
 		"incident:mainChannel": "YOUR_INCIDENT_CHANNEL_NAME_GOES_HERE",
 		"incident:warRooms": "YOUR_INCIDENT_WARROOM_CHANNEL_0_NAME_GOES_HERE,YOUR_INCIDENT_WARROOM_CHANNEL_0_NAME_GOES_HERE",
-		"incident:azureConnectionString": "YOUR_AZURE_CONNECTION_STING_GOES_HERE"
+		"incident:azureConnectionString": "YOUR_AZURE_CONNECTION_STING_GOES_HERE",
+		"incident:postmortemTemplateLink": "http://mywebsite.com/postmortem-template"
 	}
 }
