--- a/SreBot/SreBot.csproj
+++ b/SreBot/SreBot.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>netcoreapp2.0</TargetFramework>
@@ -15,7 +15,7 @@
 		<PackageReference Include="Noobot.Modules.DNS" Version="1.0.3" />
 		<PackageReference Include="Noobot.Modules.IncidentManagement" Version="1.0.10" />
 		<PackageReference Include="Noobot.Modules.LoadBalancerDotOrg" Version="1.0.3" />
-		<PackageReference Include="Noobot.Modules.NewRelic" Version="1.0.3" />
+		<PackageReference Include="Noobot.Modules.NewRelic" Version="1.0.4" />
 	</ItemGroup>
 
 	<ItemGroup>
