--- a/SreBot/SreBot.csproj
+++ b/SreBot/SreBot.csproj
@@ -12,6 +12,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.2" />
+		<PackageReference Include="Noobot.Modules.Cloudflare" Version="1.0.0" />
 		<PackageReference Include="Noobot.Modules.DNS" Version="1.0.3" />
 		<PackageReference Include="Noobot.Modules.IncidentManagement" Version="1.0.10" />
 		<PackageReference Include="Noobot.Modules.LoadBalancerDotOrg" Version="1.0.3" />
