Update app settings

--- a/SreBot/appsettings.json
+++ b/SreBot/appsettings.json
@@ -32,6 +32,9 @@
 		"incident:mainChannel": "YOUR_INCIDENT_CHANNEL_NAME_GOES_HERE",
 		"incident:warRooms": "YOUR_INCIDENT_WARROOM_CHANNEL_0_NAME_GOES_HERE,YOUR_INCIDENT_WARROOM_CHANNEL_0_NAME_GOES_HERE",
 		"incident:azureConnectionString": "YOUR_AZURE_CONNECTION_STING_GOES_HERE",
-		"incident:postmortemTemplateLink": "http://mywebsite.com/postmortem-template"
+		"incident:postmortemTemplateLink": "http://mywebsite.com/postmortem-template",
+		"cloudflare:authemail": "YOUR_API_EMAIL_GOES_HERE",
+		"cloudflare:authkey": "YOUR_API_KEY_GOES_HERE",
+		"cloudflare:apiurl": "https://api.cloudflare.com/client/v4"
 	}
 }
