--- a/src/SreBot.Web/SreBot.Web.csproj
+++ b/src/SreBot.Web/SreBot.Web.csproj
@@ -5,14 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="CBot" Version="1.0.1" />
+    <PackageReference Include="CBot.Modules.Cloudflare" Version="1.0.1" />
+    <PackageReference Include="CBot.Modules.IncidentManagement" Version="1.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1" />
-    <PackageReference Include="SharpBotCore" Version="1.0.0-alpha10" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
