--- a/src/SreBot.Web/appsettings.json
+++ b/src/SreBot.Web/appsettings.json
@@ -7,5 +7,19 @@
 	"AllowedHosts": "*",
 	"Bot": {
 		"SlackApiKey": ""
-	}
+	},
+	"IncidentManagement": {
+		"IncidentNotificationChannel": "incidents",
+		"PostmortemTemplateLink": "http://mywebsite/postmortem-template",
+		"Warrooms": "incident-warroom0,incident-warroom1,incident-warroom2",
+		"AzureConnectionString": ""
+	},
+	"IncidentManagement.Web": {
+		"ChannelBaseUrl": "https://myslackorg.slack.com/messages/"
+	},
+	"Cloudflare": {
+		"AuthEmail": "",
+		"AuthKey": "",
+		"ApiUrl": "https://api.cloudflare.com/client/v4"
+	} 
 }
