Add NewRelic module

--- a/src/SreBot.Web/appsettings.json
+++ b/src/SreBot.Web/appsettings.json
@@ -12,7 +12,7 @@
 		"IncidentNotificationChannel": "incidents",
 		"PostmortemTemplateLink": "http://mywebsite/postmortem-template",
 		"Warrooms": "incident-warroom0,incident-warroom1,incident-warroom2",
-		"AzureConnectionString": ""
+		"AzureConnectionString": "DefaultEndpointsProtocol=https;AccountName=YOUR_ACCOUNT_NAME;AccountKey=YOUR_ACCOUNT_KEY;"
 	},
 	"IncidentManagement.Web": {
 		"ChannelBaseUrl": "https://myslackorg.slack.com/messages/"
@@ -21,5 +21,9 @@
 		"AuthEmail": "",
 		"AuthKey": "",
 		"ApiUrl": "https://api.cloudflare.com/client/v4"
-	} 
+	},
+	"NewRelic": {
+		"ApiKey": "",
+		"ApplicationsAccountBaseUrl": ""
+	}
 }
