Update newrelic module

--- a/src/SreBot.Web/appsettings.json
+++ b/src/SreBot.Web/appsettings.json
@@ -23,6 +23,7 @@
 		"ApiUrl": "https://api.cloudflare.com/client/v4"
 	},
 	"NewRelic": {
+		"ApiUrl": "https://api.newrelic.com/v2/",
 		"ApiKey": "",
 		"ApplicationsAccountBaseUrl": ""
 	}
