Update NewRelic page to support multiple accounts (#2)
* Update NewRelic page to support multiple accounts

Add dropdown to NewRelic applications page to select account name
Add ApplicationListViewModel

* Remove unused GetAccountNames call

* Revert NewRelic page to showing unhealthy apps

--- a/src/SreBot.Web/appsettings.json
+++ b/src/SreBot.Web/appsettings.json
@@ -23,8 +23,8 @@
 		"ApiUrl": "https://api.cloudflare.com/client/v4"
 	},
 	"NewRelic": {
+		"Accounts": "account1-id,account1-apikey,account1-name,account1-is-default|account2-id,account2-apikey,account2-name,account2-is-default",
 		"ApiUrl": "https://api.newrelic.com/v2/",
-		"ApiKey": "",
-		"ApplicationsAccountBaseUrl": ""
+		"ApplicationsAccountBaseUrl": "https://rpm.newrelic.com/accounts/{accountId}/applications/"
 	}
 }
